objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>L2I_END_DATE_ACTIVE_LINE__c</fullName>
        <label>End Date Active Line</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_INVENTORY_ITEM_ID__c</fullName>
        <label>Inventory Item ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Migrate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to determine if product will be moved to upper orgs.</description>
        <label>Migrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Migration_External_Id__c</fullName>
        <description>Field used for migrating data(configuration data) from one environment to another.</description>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_PART_DESCRIPTION__c</fullName>
        <label>Part Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_PRICE_LIST_LINE_ID__c</fullName>
        <externalId>true</externalId>
        <label>Price List Line ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_PRODUCT_UOM_CODE__c</fullName>
        <label>Product UOM Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Requires_Migrational_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Migrational Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_START_DATE_ACTIVE_LINE__c</fullName>
        <label>Start Date Active Line</label>
        <type>DateTime</type>
    </fields>
</CustomObject>